# dynamic-music-vst

./: .gitignore  CMakeLists.txt  onset_envelope_cpp.txt  update_plugin.sh
JUCE/DemoRunner.app/Contents/: CodeResources  Info.plist
JUCE/DemoRunner.app/Contents/_CodeSignature/: CodeResources
JUCE/Projucer.app/Contents/: CodeResources  Info.plist
JUCE/examples/DemoRunner/: DemoRunner.jucer
JUCE/examples/DemoRunner/Builds/Android/app/: CMakeLists.txt
JUCE/examples/DemoRunner/Builds/LinuxMakefile/: Makefile
JUCE/examples/DemoRunner/Builds/MacOSX/DemoRunner.xcodeproj/: project.pbxproj
JUCE/examples/DemoRunner/Builds/VisualStudio2019/: DemoRunner_App.vcxproj  DemoRunner_App.vcxproj.filters
JUCE/examples/DemoRunner/Builds/VisualStudio2022/: DemoRunner_App.vcxproj  DemoRunner_App.vcxproj.filters
JUCE/examples/DemoRunner/Builds/iOS/DemoRunner.xcodeproj/: project.pbxproj
JUCE/examples/DemoRunner/JuceLibraryCode/: JuceHeader.h
JUCE/extras/AudioPluginHost/Source/: AudioPlayer.h  AudioPlayerNode.cpp  AudioPlayerNode.h
Source/: AudioAnalysis.cpp  AudioAnalysis.h  AudioRetarget.cpp  AudioRetarget.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SimilarityMatrixComponent.cpp  SimilarityMatrixComponent.h  SourceOverviewComponent.cpp  SourceOverviewComponent.h  TimelineComponent.cpp  TimelineComponent.h
Source/Displays/: WaveformDisplay.h
